--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,228 @@
   text-align: center;
   width: 100%;
 }
-body {
-  background-image: linear-gradient(180deg,rgb(135, 12, 173), black);
+img.models {
+  overflow: hidden;
+  height: 9rem;
+  width: 9rem;
+}
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 h1.title{
-  margin-top: 5%;
-  color : white;
+  margin-top: 10%;
+  color: black;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .siteFooter{
-  margin-top: auto
+  margin-top: auto;
+}
+
+div.nav_login {
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+}
+
+.login_logo {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.nav_items {
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+img.home_logo {
+  height: 4rem;
+  width: 4rem;
+}
+
+div.models-container {
+  margin:5rem;
+}
+
+img.hover img{
+    transition: transform 2s;
+}
+
+img.hover:hover
+    {
+      -moz-box-shadow: 10px 10px 10px #ccc;
+      -webkit-box-shadow: 10px 10px 20px #ccc;
+      box-shadow: 10px 10px 20px #ccc;
+    }
+
+    .card{
+      border: none;
+      border-top: 5px solid  rgb(176,106,252);
+      background: #212042;
+      color: #57557A;
+    }
+    p.sign_in_header{
+      font-weight: 600;
+      font-size: 15px;
+    }
+    .fab{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      height: 20px;
+      width: 30px;
+    }
+    .fab:hover{
+      cursor: pointer;
+    }
+    .fa-twitter{
+      color: #56ABEC;
+    }
+    .fa-facebook{
+      color: #1775F1;
+    }
+    .fa-google{
+      color: #CB5048;
+    }
+    .division{
+      float: none;
+      position: relative;
+      margin: 30px auto 20px;
+      text-align: center;
+      width: 100%;
+      box-sizing: border-box;
+    }
+    .division .line{
+      border-top: 1.5px solid #57557A;;
+      position: absolute;
+      top: 13px;
+      width: 85%;
+    }
+    .line.l{
+      margin-left: 9px;
+      width: 8rem;
+    }
+    .line.r{
+      margin-left: -3rem;
+      width: 8rem;
+    }
+    .division span{
+      font-weight: 600;
+      font-size: 14px;
+    }
+    .myform{
+      padding: 0 25px 0 33px;
+    }
+    .form-control{
+      border: 1px solid #57557A;
+      border-radius: 3px;
+      background: #212042;
+      margin-bottom: 20px;
+      letter-spacing: 1px;
+      
+    }
+    .form-control:focus{
+      border: 1px solid #57557A;
+      border-radius: 3px;
+      box-shadow: none;
+      background: #212042;
+      color: #fff;
+      letter-spacing: 1px;
+    }
+    .bn{
+      text-decoration: underline;
+    }
+    .bn:hover{
+      cursor: pointer;
+    }
+    .form-check-input {
+        margin-top: 8px!important;
+        }
+    .btn-primary{
+    background: linear-gradient(135deg, rgba(176,106,252,1) 39%,rgba(116,17,255,1) 101%);
+    border: none;
+    border-radius: 50px;
+    }
+    .btn-primary:focus{
+      box-shadow: none;
+      border: none;
+    }
+    small{
+      color: #F2CEFF;
+    }
+    .far.fa-user{
+      font-size: 13px;
+    }
+    
+    @media(min-width: 767px){
+      .bn{
+        text-align: right;
+      }
+    }
+    @media(max-width: 767px){
+      .form-check{
+        text-align: center;
+      }
+      .bn{
+        text-align: center;
+        align-items: center;
+      }
+    }
+    @media(max-width: 450px){
+      .fab{
+        width: 100%;
+        height: 100%;
+      }
+      .division .line{
+        width: 50%;
+      }
+    }
+
+    .fa-eye-slash.btn{
+      border: none;
+      outline: none;
+      box-shadow: none;
+  }
+
+  .password-con {
+    position: relative;
+  }
+
+  .eyeslash {
+    position: absolute;
+    top: 56%;
+    left: 85%;
+    transform: translate(-50% -50%);
+    z-index: 10;
+    pointer-events: all;
+    cursor: pointer;
+    transition: color 500ms ease-in-out;
+  }
+
+  .eyeslash:hover {
+    color: rgb(159, 214, 232);
+  }
+
+  .forgot-password {
+    color: #82b8e1;
+    transition: color 500ms ease-out;
+  }
+  .forgot-password:hover {
+    color: #1d70db;
+    transition: color 500ms ease-out;
+  }
+
+section.userContact
+{
+  margin-right: 6rem;
+}
+.footer-content__2
+{
+  list-style-type: none;
+  margin-right: 1.5rem;
+}
+.details{
+  margin-left: 14rem;
 }
 
